# QML-Timer

./: CMakeLists.txt  README.md  res.qrc
src/: countdown.cpp  countdown.h  main.cpp  qtsqlmanager.cpp  qtsqlmanager.h  stopwatch.cpp  stopwatch.h
src/qml/: SwipeTimerView.qml  TopView.qml  main.qml  qml.qrc
src/qml/Components/: ButtonGreen.qml  CongratulationsScreen.qml  CursorComp.qml  GlowEffectView.qml  MelodyChoice.qml
src/qml/Countdown/: CDInputField.qml  CountdownView.qml
src/qml/Stopwatch/: StopwatchView.qml
